# m5b1-cicd

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  tree_md.py
.github/workflows/: ci-backend.yml  docker-publish.yml
src/cicd/backend/: Dockerfile  main.py
src/cicd/backend/modules/: calcul.py
src/cicd/backend/tests/: test_calcul.py
src/cicd/frontend/: Dockerfile  app.py
